src/Services/canteenServices/deductionServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deduction-service
  labels:
    name: deduction-service
