src/Services/canteenServices/deductionServices/k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deduction-service
  labels:
    name: deduction-service
    environment: production
