src/Services/canteenServices/deductionServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deduction-service
  namespace: deduction-service
  labels:
    app: deduction-service
spec:
  type: LoadBalancer
  selector:
    app: deduction-service
  ports:
  - name: http
    port: 80
    targetPort: 5192
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: deduction-service-internal
  namespace: deduction-service
  labels:
    app: deduction-service
spec:
  type: ClusterIP
  selector:
    app: deduction-service
  ports:
  - name: http
    port: 5192
    targetPort: 5192
    protocol: TCP
